# modbusanalyzer

./: LICENSE  ModbusAnalyzer_Requirements.txt  README.md  build_and_release.bat  modbus_analyzer.py  modbus_analyzer.spec  requirements.txt  update.json
core/: data_processor.py  modbus_worker.py  plugin_base.py  plugin_manager.py  project_manager.py  protocol.py  serial_manager.py
core/plugin/: __init__.py  base.py  config.py  manager.py
plugins/: build_plugins.bat  updater_plugin.py
plugins/updater/: CMakeLists.txt  __init__.py  config.py  updater_plugin.cpp
ui/: components.py  main_window.py
utils/: excel_manager.py  log_manager.py
